# claude-code-gpt-5

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHECKLIST.md  CLAUDE.md  ChatCompletions_API_to_GenericStreamingChunk.md  DOCKER_DEPLOYMENT.md  DOCKER_PUBLISHING.md  DOCKER_TIPS.md  Dockerfile  Makefile  README.md  README_BOILERPLATE.md  _CHECKLIST.md  config.yaml  custom_handler.py  custom_llm_handler.py  custom_llm_router.py  deploy-docker.sh  docker-compose.dev.yml  docker-compose.yml  kill-docker.sh  librechat-run.sh  pyproject.toml  run-docker.sh  stop-docker.sh  test_enforcement.py  uv-run.sh
ChatCompletions_API_streaming_examples2/: 20251109_125816_01437_RESPONSE_STREAM.md  20251109_125816_01973_RESPONSE_STREAM.md  20251109_130011_19426_RESPONSE_STREAM.md  20251109_130011_19523_RESPONSE_STREAM.md  20251109_130011_19635_RESPONSE_STREAM.md
claude_code_proxy/: claude_code_router.py  proxy_config.py  proxy_config.yaml  route_model.py
common/: tracing_in_markdown.py  utils.py
docs/: CONVERT_TO_BOILERPLATE.md  DOCKER_DEPLOYMENT.md  DOCKER_PUBLISHING.md  DOCKER_TIPS.md  USE_AS_BOILERPLATE.md
librechat/: Dockerfile  README.md  docker-compose.override.yml  librechat.yaml  run-docker-compose.sh
proxy/: config.py  convert_stream.py  custom_llm_router.py  responses_api_tracing.py  route_model.py  tracing_in_markdown.py  utils.py
responses_api_migration_materials/: 20251001_072421_1477_RESPONSE.md  20251001_072439_3496_RESPONSE_STREAM.md  OPENAI_MIGRATION_DOC.md  chat_completions_messages_example.json  (+1 more)
src/: __init__.py  (+3 more)
(+8 files in other folders)
