[tool.black]
line-length = 119

[project]
name = "claude-code-gpt-5"
version = "0.2.0"
description = "Connect Claude Code CLI to GPT-5"
readme = "README.md"

requires-python = ">=3.8"
dependencies = ["litellm[proxy]"]

[project.optional-dependencies]
langfuse = ["langfuse"]
dev = [
    "black",
    "pre-commit",
    "pylint",
]
